--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 Contrary to popular belief, lower costs and higher customer satisfaction are not mutually exclusive 
                 when companies optimize the customer value equation.
             </div>
-            <div class="company-badge">Powered by Salesforce Service Cloud</div>
+            <div class="company-badge">Powered by Immeo</div>
         </div>
 
         <div class="tool-container">
